--- a/src/JokeList.css
+++ b/src/JokeList.css
@@ -17,8 +17,8 @@
 }
 
 .JokeList-title {
-  font-size: 4rem;
-  margin: 2rem;
+  font-size: 3rem;
+  margin: 2rem 1.6rem;
   color: white;
   font-weight: 300;
   letter-spacing: 0.6rem;
@@ -46,4 +46,30 @@
 .JokeList-spinner {
   color: white;
   text-align: center;
+}
+
+.JokeList-getmore {
+  font-size: 1.5rem;
+  /* width: 60%; */
+  border-radius: 2rem;
+  padding: 1rem 2rem;
+  margin: 2rem 1.6rem;
+  color: white;
+  font-weight: 700;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  transition: 0.8s cubic-bezier(0.2, 1, 0.2, 1);
+  background: linear-gradient(
+    135deg,
+    rgba(179, 229, 252, 1) 0%,
+    rgba(179, 229, 252, 1) 50%,
+    rgba(240, 98, 146, 1) 50%,
+    rgba(240, 98, 146, 1) 100%
+  );
+  box-shadow: 0 19px 38px rgba(0, 0, 0, 0.3), 0 15px 12px rgba(0, 0, 0, 0.1);
+}
+.JokeList-getmore:hover {
+  transform: translateY(-2px);
+  box-shadow: 0 15px 30px rgba(0, 0, 0, 0.25);
 }
